Issue #2244835 by loopduplicate: CKEditor is not visible in Panels IPE in IE11.

--- a/ckeditor.css
+++ b/ckeditor.css
@@ -46,7 +46,13 @@ table.cke_editor fieldset {
 .cke_dialog tr td:last-child {
     border-right: 0;
 }
-
+/* Panels in IE11 [#2244835] */
+.cke.cke_chrome {
+    visibility: inherit;
+}
+.cke.cke_panel {
+    visibility: visible;
+}
 /*toolbar Drag & Drop*/
 form#ckeditor-admin-profile-form textarea#edit-toolbar {
     display: none;
